Fix permission check & fix roles page overflow

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -18,6 +18,10 @@
     margin-inline: -2vw;
 }
 
+.spreadsheet{
+    overflow: auto;
+}
+
 .excel {
     display: flex;
     flex-direction: column;
