--- a/src/styles/mainHeader.css
+++ b/src/styles/mainHeader.css
@@ -7,7 +7,7 @@
     align-items: center;
     width: 100%;
     height: 70px;
-    padding: 5px;
+    padding-block: 5px;
     overflow: hidden;
     position: sticky;
     top: 0;
