--- a/src/styles/users.css
+++ b/src/styles/users.css
@@ -5,7 +5,6 @@
     justify-content: space-between;
     align-content: center;
     align-items: center;
-    height: 90vh;
 }
 
 .users-main main a {
